--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "minechat_connector"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-
+aiofiles = '23.2.1'
 
 [build-system]
 requires = ["poetry-core"]
