--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "minechat_connector"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 aiofiles = '23.2.1'
+python-dotenv = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
